feat: add calendar logic add remainder form

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     implementation 'com.tbuonomo:dotsindicator:4.3'
     //////////////////////////////////////
 
+    ///////Date Picker/////////
+    implementation 'com.kizitonwose.calendar:view:2.3.0'
+
 }
