--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
     id 'org.jetbrains.kotlin.plugin.parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -43,7 +44,7 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -65,4 +66,8 @@ dependencies {
 
     //////Coroutines//////
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+
+    /////Room//////
+    implementation 'androidx.room:room-runtime:2.5.1'
+    kapt("androidx.room:room-compiler:2.5.1")
 }
