--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
     <application
         android:name=".MainApplication"
@@ -15,7 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReminderTask"
         tools:targetApi="31">
-
+        <receiver android:name=".models.repo.NotificationRepository"
+            android:enabled="true"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAHX5KYphDIrleFqs3rbJJ5WWDbt-bWGmo" />
