--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
     <application
-        android:name=".MainApplication"
+        android:name=".presentation.BaseApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,13 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReminderTask"
         tools:targetApi="31">
-        <receiver android:name=".models.repo.NotificationRepository"
+        <receiver android:name=".data.source.repo.NotificationRepository"
             android:enabled="true"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAHX5KYphDIrleFqs3rbJJ5WWDbt-bWGmo" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
